--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
     <title>
       {% block title %}{{ translations['title'][current_lang] }}{% endblock %}
     </title>
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon.png') }}">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -176,6 +177,42 @@
         /* Un tono ligeramente diferente para el efecto */
         background-color: #29d1d1 !important; 
         border-color: #29d1d1 !important;
+      }
+
+      /* Estilo personalizado para el botón VOLVER */
+      .btn-secondary {
+        /* CAMBIA ESTE CÓDIGO POR EL COLOR QUE QUIERAS */
+        background-color: #159696 !important; /* Ejemplo: Rojo oscuro */
+        border-color: #159696 !important;
+        color: #ffffff !important;
+      }
+      
+      .btn-secondary:hover {
+        background-color: #29d1d1 !important; /* Color al pasar el mouse */
+        border-color: #29d1d1 !important;
+      }
+      /* 1. MODIFICAR BOTÓN "VER EN DBPEDIA" (btn-outline-primary) */
+      /* Lo pondremos Verde Azulado para que resalte */
+      .btn-outline-primary {
+        color: #159696 !important;
+        border-color: #159696 !important;
+      }
+
+      .btn-outline-primary:hover {
+        background-color: #159696 !important;
+        color: #ffffff !important; /* Texto blanco al pasar el mouse */
+      }
+
+      /* 2. MODIFICAR BOTÓN "VER DETALLES" (btn-outline-secondary) */
+      /* Lo pondremos Negro/Oscuro para que combine con el botón Buscar */
+      .btn-outline-secondary {
+        color: #159696 !important;
+        border-color: #159696 !important;
+      }
+
+      .btn-outline-secondary:hover {
+        background-color: #159696 !important;
+        color: #ffffff !important; /* Texto blanco al pasar el mouse */
       }
     </style>
   </head>
