--- a/templates/search.html
+++ b/templates/search.html
@@ -4,7 +4,14 @@ translations['title'][current_lang] }}{% endblock %} {% block content %}
   <div class="row justify-content-center">
     <div class="col-lg-10">
       <h1 class="text-center mb-4">
-        {{ translations['title'][current_lang] }}
+        <img 
+          src="{{ url_for('static', filename='icono_titulo.png') }}" 
+          alt="Logo" 
+          style="width: 70px; height: 70px; margin-right: 15px; vertical-align: middle;"
+        >
+        <span style="vertical-align: middle;">
+          {{ translations['title'][current_lang] }}
+        </span>
       </h1>
 
       <div class="search-form mb-5">
